--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,85 @@
         font-family: system-ui, sans-serif;
     }
 }
+
+:root {
+    --listitem-marker-font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
+    --listitem-marker-font-size: 1rem;
+    --listitem-marker-color: #374151;
+    --listitem-marker-background-color: transparent;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.PlaygroundEditorTheme__listItemChecked,
+.PlaygroundEditorTheme__listItemUnchecked {
+    position: relative;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    list-style-type: none;
+    outline: none;
+    display: block;
+    min-height: 1.5em;
+}
+
+.PlaygroundEditorTheme__listItemChecked > *,
+.PlaygroundEditorTheme__listItemUnchecked > * {
+    margin-left: 0.01em;
+}
+
+.PlaygroundEditorTheme__listItemUnchecked:before,
+.PlaygroundEditorTheme__listItemChecked:before {
+    content: '\200B';
+    width: 0.9em;
+    height: 0.9em;
+    top: 50%;
+    left: 0;
+    cursor: pointer;
+    display: block;
+    background-size: cover;
+    position: absolute;
+    transform: translateY(-50%);
+}
+
+.PlaygroundEditorTheme__listItemChecked {
+    text-decoration: line-through;
+}
+
+.PlaygroundEditorTheme__listItemUnchecked:focus:before,
+.PlaygroundEditorTheme__listItemChecked:focus:before {
+    box-shadow: 0 0 0 2px #a6cdfe;
+    border-radius: 2px;
+}
+
+.PlaygroundEditorTheme__listItemUnchecked:before {
+    border: 1px solid #999;
+    border-radius: 2px;
+}
+
+.PlaygroundEditorTheme__listItemChecked:before {
+    border: 1px solid rgb(61, 135, 245);
+    border-radius: 2px;
+    background-color: #3d87f5;
+    background-repeat: no-repeat;
+}
+
+.PlaygroundEditorTheme__listItemChecked:after {
+    content: '';
+    cursor: pointer;
+    border-color: #fff;
+    border-style: solid;
+    position: absolute;
+    display: block;
+    top: 45%;
+    width: 0.2em;
+    left: 0.35em;
+    height: 0.4em;
+    transform: translateY(-50%) rotate(45deg);
+    border-width: 0 0.1em 0.1em 0;
+}
